--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 * {
     scroll-behavior: smooth;
   }
-  
+ body{
+  font-family: Sans-serif;
+ } 
 .d-flex-between {
     display: flex;
     justify-content: space-between;
@@ -14,14 +16,21 @@
     background: #fff;
     box-shadow: 0px 2px 0px rgba(23, 162, 184, 0.5);
  }
+ ul{
+   text-align: center;
+ }
  li{
     list-style-type: none;
+ }
+ h4 , li{
+  font-weight: bold;
  }
   .footer-section {
      text-align: center;     
    }
    .footer-icon {
      margin: 10px 10px;
+     color: #17a2b8;
    }
      .footer-section :hover {
        text-decoration: none; 
@@ -31,6 +40,6 @@
    }
 .container-fluid{
     width: 100%;  
-    padding: 9% 15% 0%;
+    padding: 15% 15% 0%;
   }
   
